--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "labsroom/mahasiswa",
 	"author": [
 		{
-			"name": "gagas",
-			"email": "gagasprastya65@gmail.com"
+			"name": "atfal",
+			"email": "atfalstyle@gmail.com"
 		}
 	],
 	"require":{
