--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.2.4",
-        "setasign/fpdf": "1.8.1"
     },
     "require-dev": {
-        "mikey179/vfsStream": "1.1.*"
+        "phpunit/phpunit": "4.5"
     }
 }
