--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "http://ngoping.blogspot.com",
     "license": "MIT",
     "require": {
-        "php": ">=5.2.4",
+        "php": ">=5.2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5"
