--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
     "license": "GPL-3.0-or-later",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.6"
     }
 }
