--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,19 @@
     "name": "eureka/app",
     "type": "project",
     "homepage": "http://ngoping.blogspot.com",
-    "license": "MIT",
     "support": {
         "website": "http://ngoping.blogspot.com/"
     },
     "license": "GPL-3.0-or-later",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "madskullcreations/simplicity":"dev-master@dev"
     }
+    "repositories": [
+      {
+         "type": "vcs",
+         "url": "https://github.com/madskullcreations/simplicity" 
+      }
+    ]
 }
