--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,9 @@
         "php": ">=5.6",
         "madskullcreations/simplicity":"dev-master@dev"
     }
-    "repositories": [
-      {
+    "repositories": {
          "type": "vcs",
          "url": "https://github.com/madskullcreations/simplicity" 
-      }
-    ]
+    }
+    
 }
